# Python-packaging-tutorial

./: LICENSE  README.md  pyproject.toml
src/Tutorial_Himanshu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
