[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Tutorial_Himanshu"
version = "0.0.1"
authors = [
  { name="Himanshu Gupta", email="Himanshu.gupta01@tigeranalytics.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Himanshu-guptaa/Python-packaging-tutorial"